# RCRI

./: .gitignore  CMakeLists.txt  README.md  rcri_driver.py  setup.py
confsearch_drivers/: ddof_mc.py  parallel_mc.py  recursive_mc.py  simple_mc.py
rcrilib/: __init__.py
rcrilib/CoreParsers/: __init__.py  cyclicpart.py  fakebond.py  geomunit.py  linkingbond.py  molecule.py  problem.py
rcrilib/Drivers/: __init__.py  ddof.py
rcrilib/Helpers/: __init__.py  counters.py  datastructures.py  logging.py  math.py  sharedvalue.py  syssearch.py  testing.py  utilities.py  validation.py
rcrilib/Solvers/: __init__.py  flappingsolver.py  fourfivesolver.py  rigidfrag.py  solver.py  tlcsolver.py
testing/: cycles_1.sdf  cycles_2.sdf  cycles_4.sdf  default.ini  flapping_1.sdf  flapping_3.sdf  flapping_4.sdf  flapping_5.sdf  fourfive_0.sdf  fourfive_1.sdf  fourfive_3.sdf  fourfive_4.sdf  fourfive_5.sdf  fourfive_6.sdf  fourfive_7.sdf  mm_1A7X.sdf  mm_1BXO.sdf  mm_1BZL.sdf  mm_1E9W.sdf  mm_1EHL.sdf  mm_1ESV.sdf  mm_1FKD.sdf  mm_1FKI.sdf  mm_1FKJ.sdf  mm_1FKL.sdf  mm_1GHG.sdf  mm_1JFF.sdf  mm_1KEG.sdf  mm_1KHR.sdf  mm_1MRL.sdf  mm_1NMK.sdf  mm_1NSG.sdf  mm_1NT1.sdf  mm_1NTK.sdf  mm_1NWX.sdf  mm_1OSF.sdf  mm_1PFE.sdf  mm_1PKF.sdf  mm_1PPJ.sdf  mm_1QPF.sdf  (+59 more)
tlc_src/: main.cpp  main_pep.f90  sturm.c  tripep_closure.f90
